--- a/packages/web/webgl/package.json
+++ b/packages/web/webgl/package.json
@@ -10,9 +10,9 @@
         "clear": "rm -rf lib tmp build test.gjs.js",
         "print:name": "echo '@gjsify/webgl'",
         "init:meson": "meson setup build .",
-        "build": "yarn print:name && yarn init:meson && yarn build:meson && yarn build:gjsify && yarn build:types",
+        "build": "yarn print:name && yarn build:meson && yarn build:gjsify && yarn build:types",
         "build:gjsify": "gjsify build --library 'src/ts/**/*.{ts,js}'",
-        "build:meson": "meson compile -C build",
+        "build:meson": "yarn init:meson && meson compile -C build",
         "build:types": "tsc --emitDeclarationOnly || exit 0",
         "build:test": "gjsify build src/ts/test.ts --app gjs --outfile test.gjs.js",
         "test": "yarn print:name && yarn build:gjsify && yarn build:test && yarn test:gjs",
