--- a/examples/deno-module-jsonc/package.json
+++ b/examples/deno-module-jsonc/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.gjs.js",
   "type": "module",
   "scripts": {
-    "clear": "rm -rf dist",
+    "clear": "rm -rf dist tsconfig.tsbuildinfo",
     "print:name": "echo '@gjsify/example-deno-module-jsonc'",
     "start": "yarn build && yarn start:gjs",
     "start:gjs": "gjs -m dist/index.gjs.js",
