--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "clear": "yarn workspaces foreach --no-private --parallel run clear",
     "print:name": "echo 'gjsify (root)'",
     "print:yarn": "echo 'Using yarn' && yarn --version",
-    "build": "yarn print:name && yarn print:yarn && yarn build:infra && yarn build:gjs && yarn build:all",
-    "build:infra": "yarn workspace @gjsify/resolve-npm run build && yarn workspace @gjsify/esbuild-plugin-transform-ext run build && yarn workspace @gjsify/esbuild-plugin-deepkit run build && yarn workspace @gjsify/esbuild-plugin-deno-loader run build && yarn workspace @gjsify/esbuild-plugin-gjsify run build && yarn workspace @gjsify/cli run build",
-    "build:gjs": "yarn workspace @gjsify/webgl run build:meson && yarn workspace @gjsify/types run build && yarn workspace @gjsify/utils run build && yarn workspace @gjsify/webgl run build && yarn workspace @gjsify/unit run build && yarn workspace @gjsify/gio-2.0 run build && yarn workspace @gjsify/soup-3.0 run build",
-    "build:all": "yarn workspaces foreach --no-private --parallel run build"
+    "build": "yarn print:name && yarn print:yarn && yarn build:infra && yarn build:gjs && yarn build:other",
+    "build:infra": "yarn workspace @gjsify/resolve-npm run build && yarn workspace @gjsify/esbuild-plugin-transform-ext run build && yarn workspace @gjsify/esbuild-plugin-deepkit run build && yarn workspace @gjsify/esbuild-plugin-deno-loader run build && yarn workspace @gjsify/esbuild-plugin-gjsify run build && yarn workspace @gjsify/cli run build || exit 0",
+    "build:gjs": "yarn workspace @gjsify/webgl run build:meson && yarn workspace @gjsify/types run build && yarn workspace @gjsify/utils run build && yarn workspace @gjsify/html-image-element run build && yarn workspace @gjsify/webgl run build && yarn workspace @gjsify/unit run build && yarn workspace @gjsify/gio-2.0 run build && yarn workspace @gjsify/soup-3.0 run build || exit 0",
+    "build:other": "yarn workspaces foreach --no-private --parallel run build"
   },
   "author": "Pascal Garber <pascal@artandcode.studio>",
   "license": "MIT",
   "devDependencies": {
     "@types/jsdom": "^20.0.1",
-    "typescript": "^5.0.0-dev.20230109"
+    "typescript": "^5.0.0-dev.20230110"
   },
   "packageManager": "yarn@4.0.0-rc.35",
   "disabled_resolutions": {
