--- a/packages/gjs/soup-3.0/tsconfig.json
+++ b/packages/gjs/soup-3.0/tsconfig.json
@@ -15,5 +15,8 @@
     "checkJs": false,
     "reflection": false,
     "include": ["src/**/*.ts"],
-    "exclude": ["src/test.ts", "src/**/*.spec.ts"]
+    "exclude": ["src/test.ts", "src/**/*.spec.ts"],
+    "references": [
+      { "path": "../gio-2.0/tsconfig.json" },
+    ]
 }
