--- a/packages/node/buffer/package.json
+++ b/packages/node/buffer/package.json
@@ -5,7 +5,7 @@
     "main": "lib/cjs/index.js",
     "module": "lib/esm/index.js",
     "scripts": {
-        "clear": "rm -rf lib",
+        "clear": "rm -rf lib tsconfig.tsbuildinfo",
         "print:name": "echo '@gjsify/buffer'",
         "build": "yarn print:name && yarn build:gjsify && yarn build:types",
         "build:gjsify": "gjsify build --library 'src/**/*.{ts,js}' --exclude 'src/**/*.spec.{mts,ts}' 'src/test.{mts,ts}'",
@@ -26,7 +26,7 @@
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/node": "^18.11.18",
-        "typescript": "^5.0.0-dev.20230109"
+        "typescript": "^5.0.0-dev.20230110"
     },
     "dependencies": {
         "@gjsify/deno_std": "workspace:^"
