--- a/packages/node/os/package.json
+++ b/packages/node/os/package.json
@@ -6,7 +6,7 @@
   "module": "lib/esm/index.js",
   "type": "module",
   "scripts": {
-    "clear": "rm -rf lib",
+    "clear": "rm -rf lib tsconfig.tsbuildinfo test.gjs.mjs test.node.mjs",
     "print:name": "echo '@gjsify/os'",
     "build": "yarn print:name && yarn build:gjsify",
     "build:gjsify": "gjsify build --library 'src/**/*.{ts,js}' --exclude 'src/**/*.spec.{mts,ts}' 'src/test.{mts,ts}'",
@@ -23,7 +23,6 @@
     "os"
   ],
   "dependencies": {
-    "@gjsify/cli": "workspace:^",
     "@gjsify/types": "workspace:^",
     "@gjsify/utils": "workspace:^"
   }
