--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,8 @@
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true
   },
-  "references": []
+  "references": [
+    { "path": "packages/web/html-image-element/tsconfig.json" },
+    { "path": "packages/web/webgl/tsconfig.json"}
+  ]
 }
