feat(cli): Use get-tsconfig package to parse tsconfig files

--- a/packages/infra/cli/package.json
+++ b/packages/infra/cli/package.json
@@ -26,6 +26,7 @@
         "@gjsify/esbuild-plugin-deepkit": "workspace:^",
         "@gjsify/esbuild-plugin-gjsify": "workspace:^",
         "esbuild": "^0.16.16",
+        "get-tsconfig": "^4.3.0",
         "lodash": "^4.17.21",
         "pkg-types": "^1.0.1",
         "yargs": "^17.6.2"
