--- a/packages/web/dom-events/package.json
+++ b/packages/web/dom-events/package.json
@@ -7,7 +7,7 @@
     "types": "lib/types/index.d.js",
     "type": "module",
     "scripts": {
-        "clear": "rm -rf lib tsconfig.tsbuildinfo",
+        "clear": "rm -rf lib tsconfig.tsbuildinfo test.gjs.mjs",
         "print:name": "echo '@gjsify/dom-events'",
         "build": "yarn print:name && yarn build:gjsify && yarn build:types",
         "build:gjsify": "gjsify build --library 'src/**/*.{ts,js}' --exclude 'src/**/*.spec.{mts,ts}' 'src/test.{mts,ts}'",
