fix(node-os): Add missing dependency

--- a/packages/node/os/package.json
+++ b/packages/node/os/package.json
@@ -25,5 +25,8 @@
   "dependencies": {
     "@gjsify/types": "workspace:^",
     "@gjsify/utils": "workspace:^"
+  },
+  "devDependencies": {
+    "@gjsify/cli": "workspace:^"
   }
 }
