chore: Upgrade dependencies + fix https://github.com/evanw/esbuild/issues/2815

--- a/examples/webgl-tutorial-06/tsconfig.json
+++ b/examples/webgl-tutorial-06/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
       "module": "ESNext",
       "types": [],
+      "noLib": false,
       "target": "ESNext",
       "moduleResolution": "NodeNext",
       "experimentalDecorators": true,
