--- a/packages/deno/runtime/tsconfig.json
+++ b/packages/deno/runtime/tsconfig.json
@@ -5,11 +5,12 @@
         "jsx": "react",
         "module": "ESNext",
         "target": "ESNext",
+        "types": [],
         "noLib": true,
         "outDir": "lib",
         "declaration": true,
         "declarationDir": "lib",
-        "rootDir": ".",
+        "rootDir": "src",
         "composite": true,
         "resolveJsonModule": false,
         "allowJs": true,
