--- a/packages/web/abort-controller/package.json
+++ b/packages/web/abort-controller/package.json
@@ -28,10 +28,11 @@
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/node": "^18.11.18",
-        "typescript": "^5.0.0-dev.20230112"
+        "typescript": "^5.0.0-dev.20230113"
     },
     "dependencies": {
         "@gjsify/deno-runtime": "workspace:^",
-        "@gjsify/deno_std": "workspace:^"
+        "@gjsify/deno_std": "workspace:^",
+        "@gjsify/dom-events": "workspace:^"
     }
 }
