--- a/packages/gjs/gio-2.0/tsconfig.json
+++ b/packages/gjs/gio-2.0/tsconfig.json
@@ -3,7 +3,7 @@
       "module": "ESNext",
       "types": ["node"],
       "target": "ESNext",
-      "moduleResolution": "NodeNext",
+      "moduleResolution": "bundler",
       "experimentalDecorators": true,
       "outDir": "lib",
       "rootDir": "src",
