--- a/packages/infra/esbuild-plugin-gjsify/package.json
+++ b/packages/infra/esbuild-plugin-gjsify/package.json
@@ -9,6 +9,7 @@
     "scripts": {
         "clear": "rm -rf dist tsconfig.tsbuildinfo",
         "print:name": "echo '@gjsify/esbuild-plugin-gjsify'",
+        "test": "yarn print:name && echo 'nothing to do'",
         "build": "yarn print:name && yarn build:js && yarn build:types",
         "build:js": "node esbuild.mjs",
         "build:types": "tsc --emitDeclarationOnly || exit 0"
