--- a/packages/deno/runtime/tsconfig.json
+++ b/packages/deno/runtime/tsconfig.json
@@ -9,6 +9,7 @@
         "noLib": true,
         "outDir": "lib",
         "declaration": true,
+        "emitDeclarationOnly": true,
         "declarationDir": "lib",
         "rootDir": "src",
         "composite": true,
@@ -22,5 +23,5 @@
     "checkJs": false,
     "reflection": false,
     "include": ["src/core/**/*.ts", "src/ext/**/*.ts", "src/ops/**/*.ts", "src/runtime/**/*.ts", "src/types/**/*.ts", "src/cli/js/*.ts", "src/cli/ops/*.ts", "src/*.ts", "src/cli/tsc/dts/lib.deno.*.d.ts"],
-    "exclude": ["node_modules/**"]
+    "exclude": ["node_modules/**/*"]
 }
