--- a/packages/deno/runtime/package.json
+++ b/packages/deno/runtime/package.json
@@ -52,7 +52,7 @@
         "@tsconfig/deno": "^1.0.7",
         "fast-glob": "^3.2.12",
         "open-cli": "^7.1.0",
-        "typescript": "^5.0.0-dev.20230214"
+        "typescript": "^5.0.0-beta"
     },
     "dependencies": {
         "@gjsify/utils": "workspace:^"
