--- a/packages/infra/cli/package.json
+++ b/packages/infra/cli/package.json
@@ -33,6 +33,6 @@
     },
     "devDependencies": {
         "@types/yargs": "^17.0.22",
-        "typescript": "^5.0.0-dev.20230214"
+        "typescript": "^5.0.0-beta"
     }
 }
