--- a/packages/node/buffer/package.json
+++ b/packages/node/buffer/package.json
@@ -26,7 +26,7 @@
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/node": "^18.13.0",
-        "typescript": "^5.0.0-dev.20230214"
+        "typescript": "^5.0.0-beta"
     },
     "dependencies": {
         "@gjsify/deno_std": "workspace:^"
