--- a/packages/node/process/package.json
+++ b/packages/node/process/package.json
@@ -43,6 +43,6 @@
   "devDependencies": {
     "@gjsify/cli": "workspace:^",
     "@types/node": "^18.13.0",
-    "typescript": "^5.0.0-dev.20230214"
+    "typescript": "^5.0.0-beta"
   }
 }
