chore: Switch to @girs/gjs npm package for GJS type definitions

--- a/examples/webgl-demo-fade/package.json
+++ b/examples/webgl-demo-fade/package.json
@@ -24,7 +24,7 @@
     "@types/node": "^18.13.0"
   },
   "dependencies": {
-    "@gjsify/types": "workspace:^",
+    "@girs/gjs": "latest",
     "@gjsify/webgl": "workspace:^"
   }
 }
