--- a/packages/deno/runtime/tsconfig.json
+++ b/packages/deno/runtime/tsconfig.json
@@ -22,6 +22,6 @@
     "allowJs": true,
     "checkJs": false,
     "reflection": false,
-    "include": ["src/core/**/*.ts", "src/ext/**/*.ts", "src/ops/**/*.ts", "src/runtime/**/*.ts", "src/types/**/*.ts", "src/cli/js/*.ts", "src/cli/ops/*.ts", "src/*.ts", "src/cli/tsc/dts/lib.deno.*.d.ts"],
+    "include": ["@girs/gjs/ambient", "src/core/**/*.ts", "src/ext/**/*.ts", "src/ops/**/*.ts", "src/runtime/**/*.ts", "src/types/**/*.ts", "src/cli/js/*.ts", "src/cli/ops/*.ts", "src/*.ts", "src/cli/tsc/dts/lib.deno.*.d.ts"],
     "exclude": ["node_modules/**/*"]
 }
