--- a/examples/webgl-tutorial-05/package.json
+++ b/examples/webgl-tutorial-05/package.json
@@ -28,7 +28,7 @@
     "open-cli": "^7.1.0"
   },
   "dependencies": {
-    "@gjsify/types": "workspace:^",
+    "@girs/gjs": "latest",
     "@gjsify/webgl": "workspace:^",
     "gl-matrix": "^3.4.3"
   }
