--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "typescript"
   ],
   "scripts": {
-    "test": "yarn workspaces foreach --no-private run test",
-    "clear": "yarn workspaces foreach --no-private --parallel run clear",
+    "test": "yarn workspaces foreach -v --no-private run test",
+    "clear": "yarn workspaces foreach -v --no-private --parallel run clear",
     "print:name": "echo 'gjsify (root)'",
     "print:yarn": "echo 'Using yarn' && yarn --version",
     "build": "yarn print:name && yarn print:yarn && yarn build:infra && yarn build:gjs && yarn build:other",
@@ -18,14 +18,14 @@
     "build:gjs": "yarn workspace @gjsify/webgl run build:meson && yarn workspace @gjsify/types run build && yarn workspace @gjsify/utils run build && yarn build:deno && yarn build:web && yarn workspace @gjsify/unit run build && yarn workspace @gjsify/gio-2.0 run build && yarn workspace @gjsify/soup-3.0 run build || exit 0",
     "build:web": "yarn workspace @gjsify/dom-events run build && yarn workspace @gjsify/html-image-element run build && yarn workspace @gjsify/webgl run build",
     "build:deno": "yarn workspace @gjsify/deno-runtime run build && yarn workspace @gjsify/deno_std && yarn workspace @gjsify/deno-globals run build",
-    "build:other": "yarn workspaces foreach --no-private --parallel run build"
+    "build:other": "yarn workspaces foreach -v --no-private --parallel run build"
   },
   "author": "Pascal Garber <pascal@artandcode.studio>",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.0.0-beta"
+    "typescript": "^5.0.4"
   },
-  "packageManager": "yarn@4.0.0-rc.39",
+  "packageManager": "yarn@4.0.0-rc.42",
   "workspaces": [
     "packages/infra/*",
     "packages/gjs/*",
