--- a/packages/deno/runtime/package.json
+++ b/packages/deno/runtime/package.json
@@ -46,13 +46,14 @@
         "globals"
     ],
     "devDependencies": {
+        "@girs/gjs": "^3.0.0-beta.12",
         "@gjsify/cli": "workspace:^",
         "@gjsify/empty": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@tsconfig/deno": "^1.0.7",
         "fast-glob": "^3.2.12",
         "open-cli": "^7.1.0",
-        "typescript": "^5.0.0-beta"
+        "typescript": "^5.0.4"
     },
     "dependencies": {
         "@gjsify/utils": "workspace:^"
