--- a/packages/gjs/gio-2.0/package.json
+++ b/packages/gjs/gio-2.0/package.json
@@ -25,9 +25,9 @@
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/node": "^18.13.0",
-        "typescript": "^5.0.0-beta"
+        "typescript": "^5.0.4"
     },
     "dependencies": {
-        "@gjsify/types": "workspace:^"
+        "@girs/gjs": "latest"
     }
 }
