--- a/packages/gjs/unit/tsconfig.json
+++ b/packages/gjs/unit/tsconfig.json
@@ -6,7 +6,8 @@
     "esModuleInterop": true,
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "NodeNext"
+    "moduleResolution": "node"
   },
-  "files": ["src/index.ts"]
+  "files": ["src/index.ts"],
+  "include": ["@girs/gjs/ambient"]
 }
