--- a/packages/infra/cli/package.json
+++ b/packages/infra/cli/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "@gjsify/esbuild-plugin-deepkit": "workspace:^",
         "@gjsify/esbuild-plugin-gjsify": "workspace:^",
+        "cosmiconfig": "^8.1.3",
         "esbuild": "^0.17.8",
         "get-tsconfig": "^4.4.0",
         "lodash": "^4.17.21",
@@ -33,6 +34,6 @@
     },
     "devDependencies": {
         "@types/yargs": "^17.0.22",
-        "typescript": "^5.0.0-beta"
+        "typescript": "^5.0.4"
     }
 }
