--- a/packages/infra/esbuild-plugin-deepkit/package.json
+++ b/packages/infra/esbuild-plugin-deepkit/package.json
@@ -24,6 +24,6 @@
     "devDependencies": {
         "@types/node": "^18.13.0",
         "esbuild": "^0.17.8",
-        "typescript": "^5.0.0-beta"
+        "typescript": "^5.0.4"
     }
 }
