--- a/packages/node/url/package.json
+++ b/packages/node/url/package.json
@@ -26,7 +26,7 @@
     "devDependencies": {
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
-        "typescript": "^5.0.0-beta"
+        "typescript": "^5.0.4"
     },
     "dependencies": {
         "@gjsify/deno_std": "workspace:^"
