--- a/packages/node/util/package.json
+++ b/packages/node/util/package.json
@@ -49,7 +49,7 @@
         "@gjsify/unit": "workspace:^",
         "@types/inherits": "^0.0.30",
         "@types/node": "^18.13.0",
-        "typescript": "^5.0.0-beta"
+        "typescript": "^5.0.4"
     },
     "dependencies": {
         "@gjsify/deno_std": "workspace:^",
