--- a/packages/web/html-image-element/package.json
+++ b/packages/web/html-image-element/package.json
@@ -26,11 +26,11 @@
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/node": "^18.13.0",
-        "typescript": "^5.0.0-beta"
+        "typescript": "^5.0.4"
     },
     "dependencies": {
+        "@girs/gjs": "latest",
         "@gjsify/dom-events": "workspace:^",
-        "@gjsify/types": "workspace:^",
         "happy-dom": "^8.3.2"
     }
 }
