--- a/packages/web/webgl/package.json
+++ b/packages/web/webgl/package.json
@@ -10,6 +10,7 @@
         "clear": "rm -rf lib tmp build test.gjs.js tsconfig.tsbuildinfo",
         "print:name": "echo '@gjsify/webgl'",
         "init:meson": "meson setup build .",
+        "init:meson:wipe": "yarn init:meson --wipe",
         "build": "yarn print:name && yarn build:meson && yarn build:gjsify && yarn build:types",
         "build:gjsify": "gjsify build --library 'src/ts/**/*.{ts,js}'",
         "build:meson": "yarn init:meson && meson compile -C build",
@@ -26,11 +27,11 @@
         "@gjsify/cli": "workspace:^",
         "@gjsify/unit": "workspace:^",
         "@types/node": "^18.13.0",
-        "typescript": "^5.0.0-beta"
+        "typescript": "^5.0.4"
     },
     "dependencies": {
+        "@girs/gjs": "latest",
         "@gjsify/html-image-element": "workspace:^",
-        "@gjsify/types": "workspace:^",
         "@gjsify/utils": "workspace:^",
         "@types/bit-twiddle": "^1.0.1",
         "bit-twiddle": "^1.0.2",
