--- a/examples/webgl-demo-fade/package.json
+++ b/examples/webgl-demo-fade/package.json
@@ -24,7 +24,9 @@
     "@types/node": "^18.13.0"
   },
   "dependencies": {
-    "@girs/gjs": "latest",
+    "@girs/gio-2.0": "^2.76.1-3.0.0-beta.16",
+    "@girs/gjs": "^3.0.0-beta.16",
+    "@girs/gtk-4.0": "^4.10.1-3.0.0-beta.16",
     "@gjsify/webgl": "workspace:^"
   }
 }
