--- a/examples/webgl-tutorial-04/package.json
+++ b/examples/webgl-tutorial-04/package.json
@@ -28,7 +28,9 @@
     "open-cli": "^7.1.0"
   },
   "dependencies": {
-    "@girs/gjs": "latest",
+    "@girs/gio-2.0": "^2.76.1-3.0.0-beta.16",
+    "@girs/gjs": "^3.0.0-beta.16",
+    "@girs/gtk-4.0": "^4.10.1-3.0.0-beta.16",
     "@gjsify/webgl": "workspace:^",
     "gl-matrix": "^3.4.3"
   }
