--- a/packages/gjs/gio-2.0/package.json
+++ b/packages/gjs/gio-2.0/package.json
@@ -28,6 +28,7 @@
         "typescript": "^5.0.4"
     },
     "dependencies": {
-        "@girs/gjs": "latest"
+        "@girs/gio-2.0": "^2.76.1-3.0.0-beta.16",
+        "@girs/gjs": "^3.0.0-beta.16"
     }
 }
