--- a/packages/gjs/soup-3.0/package.json
+++ b/packages/gjs/soup-3.0/package.json
@@ -28,7 +28,7 @@
         "typescript": "^5.0.4"
     },
     "dependencies": {
-        "@girs/gjs": "latest",
-        "@gjsify/gio-2.0": "workspace:^"
+        "@girs/gjs": "^3.0.0-beta.16",
+        "@girs/soup-3.0": "^3.3.1-3.0.0-beta.16"
     }
 }
