--- a/packages/gjs/utils/tsconfig.json
+++ b/packages/gjs/utils/tsconfig.json
@@ -14,6 +14,6 @@
   "allowJs": true,
   "checkJs": false,
   "reflection": false,
-  "include": ["@girs/gjs/ambient", "src/**/*.mts", "src/**/*.ts"],
+  "include": ["@girs/gjs", "src/**/*.mts", "src/**/*.ts"],
   "exclude": ["src/test.ts", "src/**/*.spec.ts"]
 }
