--- a/packages/node/process/package.json
+++ b/packages/node/process/package.json
@@ -37,7 +37,7 @@
     "process"
   ],
   "dependencies": {
-    "@girs/gjs": "latest",
+    "@girs/gjs": "^3.0.0-beta.16",
     "@gjsify/utils": "workspace:^"
   },
   "devDependencies": {
