--- a/packages/node/require/package.json
+++ b/packages/node/require/package.json
@@ -24,6 +24,7 @@
     "test:node": "node test.node.cjs"
   },
   "dependencies": {
+    "@girs/gio-2.0": "^2.76.1-3.0.0-beta.16",
     "@gjsify/process": "workspace:^",
     "@gjsify/resolve-npm": "workspace:^",
     "@gjsify/utils": "workspace:^"
