--- a/packages/web/html-image-element/package.json
+++ b/packages/web/html-image-element/package.json
@@ -29,7 +29,7 @@
         "typescript": "^5.0.4"
     },
     "dependencies": {
-        "@girs/gjs": "latest",
+        "@girs/gjs": "^3.0.0-beta.16",
         "@gjsify/dom-events": "workspace:^",
         "happy-dom": "^8.3.2"
     }
