--- a/packages/node/net/package.json
+++ b/packages/node/net/package.json
@@ -28,6 +28,6 @@
         "@types/node": "^18.16.16"
     },
     "dependencies": {
-        "@girs/gio-2.0": "2.76.1-3.0.1"
+        "@girs/gio-2.0": "2.76.1-3.0.0-beta.16"
     }
 }
