--- a/examples/webgl-tutorial-01/package.json
+++ b/examples/webgl-tutorial-01/package.json
@@ -24,9 +24,9 @@
     "@types/node": "^18.16.16"
   },
   "dependencies": {
-    "@girs/gio-2.0": "2.76.1-3.0.0-beta.16",
-    "@girs/gjs": "^3.0.1",
-    "@girs/gtk-4.0": "4.10.3-3.0.1",
+    "@girs/gio-2.0": "2.76.1-3.0.3",
+    "@girs/gjs": "^3.0.3",
+    "@girs/gtk-4.0": "4.10.3-3.0.3",
     "@gjsify/webgl": "workspace:^"
   }
 }
