--- a/packages/gjs/types/@types/gjs/package.json
+++ b/packages/gjs/types/@types/gjs/package.json
@@ -1,7 +1,7 @@
 
 {
     "name": "@girs/gjs",
-    "version": "3.0.1",
+    "version": "3.0.3",
     "description": "GJS TypeScript type definitions for Gjs",
     "type": "module",
     "module": "gjs.js",
@@ -62,12 +62,10 @@
       "test:cjs": "tsc --noEmit gjs.d.cts"
     },
     "dependencies": {
-      
-      "@girs/gobject-2.0": "workspace:^",            
-      "@girs/glib-2.0": "workspace:^"      
+      "@girs/gobject-2.0": "2.76.1-3.0.3",            "@girs/glib-2.0": "2.76.1-3.0.3"      
     },
     "devDependencies": {
-      "typescript": "^5.0.4"
+      "typescript": "*"
     },
     "keywords": ["Gir", "TypeScript", "types", "GObject-Introspection", "GJS", "Gjs"],
     "author": "ts-for-gir",
