--- a/packages/gjs/types/@types/glib-2.0/package.json
+++ b/packages/gjs/types/@types/glib-2.0/package.json
@@ -1,7 +1,7 @@
 
 {
     "name": "@girs/glib-2.0",
-    "version": "2.76.1-3.0.1",
+    "version": "2.76.1-3.0.3",
     "description": "GJS TypeScript type definitions for GLib-2.0, generated from library version 2.76.1",
     "type": "module",
     "module": "glib-2.0.js",
@@ -32,11 +32,10 @@
       "test:cjs": "tsc --noEmit glib-2.0.d.cts"
     },
     "dependencies": {
-      "@girs/gjs": "workspace:^",      
-      "@girs/gobject-2.0": "workspace:^"      
+      "@girs/gjs": "3.0.3",      "@girs/gobject-2.0": "2.76.1-3.0.3"      
     },
     "devDependencies": {
-      "typescript": "^5.0.4"
+      "typescript": "*"
     },
     "keywords": ["Gir", "TypeScript", "types", "GObject-Introspection", "GJS", "GLib-2.0"],
     "author": "ts-for-gir",
