--- a/packages/gjs/types/@types/gwebgl-0.1/package.json
+++ b/packages/gjs/types/@types/gwebgl-0.1/package.json
@@ -1,55 +1,59 @@
-
 {
     "name": "@girs/gwebgl-0.1",
-    "version": "0.1.0-3.0.1",
+    "version": "0.1.0-3.0.3",
     "description": "GJS TypeScript type definitions for Gwebgl-0.1, generated from library version 0.1.0",
     "type": "module",
     "module": "gwebgl-0.1.js",
     "main": "gwebgl-0.1.js",
     "typedoc": {
-      "entryPoint": "./gwebgl-0.1.d.ts",
-      "readmeFile": "./README.md",
-      "displayName": "Gwebgl-0.1",
-      "tsconfig": "./tsconfig.doc.json"
+        "entryPoint": "./gwebgl-0.1.d.ts",
+        "readmeFile": "./README.md",
+        "displayName": "Gwebgl-0.1",
+        "tsconfig": "./tsconfig.doc.json"
     },
     "exports": {
-      "./ambient": "./gwebgl-0.1-ambient.d.ts",
-      "./import": "./gwebgl-0.1-import.d.ts",
-      ".": {
-        "import": {
-          "types": "./gwebgl-0.1.d.ts",
-          "default": "./gwebgl-0.1.js"
-        },
-        "require": {
-          "types": "./gwebgl-0.1.d.cts",
-          "default": "./gwebgl-0.1.cjs"
+        "./ambient": "./gwebgl-0.1-ambient.d.ts",
+        "./import": "./gwebgl-0.1-import.d.ts",
+        ".": {
+            "import": {
+                "types": "./gwebgl-0.1.d.ts",
+                "default": "./gwebgl-0.1.js"
+            },
+            "require": {
+                "types": "./gwebgl-0.1.d.cts",
+                "default": "./gwebgl-0.1.cjs"
+            }
         }
-      }
     },
     "scripts": {
-      "test": "yarn test:esm && yarn test:cjs",
-      "test:esm": "tsc --noEmit gwebgl-0.1.d.ts",
-      "test:cjs": "tsc --noEmit gwebgl-0.1.d.cts"
+        "test": "yarn test:esm && yarn test:cjs",
+        "test:esm": "tsc --noEmit gwebgl-0.1.d.ts",
+        "test:cjs": "tsc --noEmit gwebgl-0.1.d.cts"
     },
     "dependencies": {
-      "@girs/gjs": "workspace:^",      
-      "@girs/glib-2.0": "workspace:^",            
-      "@girs/gobject-2.0": "workspace:^"      
+        "@girs/gjs": "3.0.3",
+        "@girs/glib-2.0": "2.76.1-3.0.3",
+        "@girs/gobject-2.0": "2.76.1-3.0.3"
     },
     "devDependencies": {
-      "typescript": "^5.0.4"
+        "typescript": "*"
     },
-    "keywords": ["Gir", "TypeScript", "types", "GObject-Introspection", "GJS", "Gwebgl-0.1"],
+    "keywords": [
+        "Gir",
+        "TypeScript",
+        "types",
+        "GObject-Introspection",
+        "GJS",
+        "Gwebgl-0.1"
+    ],
     "author": "ts-for-gir",
     "license": "MIT",
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/gjsify/types.git"
+        "type": "git",
+        "url": "git+https://github.com/gjsify/types.git"
     },
     "bugs": {
-      "url": "https://github.com/gjsify/ts-for-gir/issues"
+        "url": "https://github.com/gjsify/ts-for-gir/issues"
     },
     "homepage": "https://github.com/gjsify/types/tree/main/gwebgl-0.1#readme"
 }
-
-
