--- a/packages/gjs/utils/package.json
+++ b/packages/gjs/utils/package.json
@@ -23,11 +23,11 @@
         "fs"
     ],
     "devDependencies": {
-        "@girs/gjs": "^3.0.1",
+        "@girs/gjs": "^3.0.3",
         "@gjsify/cli": "workspace:^",
         "typescript": "^5.1.3"
     },
     "dependencies": {
-        "@girs/gio-2.0": "2.76.1-3.0.0-beta.16"
+        "@girs/gio-2.0": "2.76.1-3.0.3"
     }
 }
