--- a/packages/infra/esbuild-plugin-gjsify/package.json
+++ b/packages/infra/esbuild-plugin-gjsify/package.json
@@ -20,32 +20,15 @@
         "esbuild"
     ],
     "dependencies": {
-        "@deepkit/core": "^1.0.1-alpha.97",
-        "@deepkit/injector": "^1.0.1-alpha.97",
-        "@deepkit/type": "^1.0.1-alpha.97",
-        "@gjsify/assert": "workspace:^",
-        "@gjsify/deno-runtime": "workspace:^",
-        "@gjsify/deno_std": "workspace:^",
-        "@gjsify/dom-events": "workspace:^",
         "@gjsify/esbuild-plugin-deepkit": "workspace:^",
         "@gjsify/esbuild-plugin-deno-loader": "workspace:^",
-        "@gjsify/events": "workspace:^",
-        "@gjsify/fetch": "workspace:^",
-        "@gjsify/fs": "workspace:^",
-        "@gjsify/node-globals": "workspace:^",
-        "@gjsify/os": "workspace:^",
-        "@gjsify/process": "workspace:^",
-        "@gjsify/require": "workspace:^",
-        "@gjsify/resolve-npm": "workspace:^",
-        "@gjsify/stream": "workspace:^",
-        "@gjsify/tty": "workspace:^",
-        "@gjsify/util": "workspace:^",
-        "@gjsify/zlib": "workspace:^",
+        "@gjsify/esbuild-plugin-transform-ext": "workspace:^",
         "assert": "^2.0.0",
         "constants-browserify": "^1.0.0",
         "core-js": "^3.30.2",
         "crypto-browserify": "^3.12.0",
         "fast-glob": "^3.2.12",
+        "lodash": "^4.17.21",
         "micromatch": "^4.0.5",
         "path-browserify": "^1.0.1",
         "punycode": "^2.3.0",
@@ -57,7 +40,6 @@
         "@types/lodash": "^4.14.195",
         "@types/micromatch": "^4.0.2",
         "esbuild": "^0.17.19",
-        "lodash": "^4.17.21",
         "typescript": "^5.1.3"
     }
 }
