--- a/packages/infra/esbuild-plugin-transform-ext/package.json
+++ b/packages/infra/esbuild-plugin-transform-ext/package.json
@@ -18,38 +18,11 @@
         "gjsify",
         "esbuild"
     ],
-    "dependencies": {
-        "@deepkit/core": "^1.0.1-alpha.97",
-        "@deepkit/injector": "^1.0.1-alpha.97",
-        "@deepkit/type": "^1.0.1-alpha.97",
-        "@gjsify/assert": "workspace:^",
-        "@gjsify/esbuild-plugin-deepkit": "workspace:^",
-        "@gjsify/esbuild-plugin-deno-loader": "workspace:^",
-        "@gjsify/events": "workspace:^",
-        "@gjsify/fs": "workspace:^",
-        "@gjsify/node-globals": "workspace:^",
-        "@gjsify/os": "workspace:^",
-        "@gjsify/process": "workspace:^",
-        "@gjsify/require": "workspace:^",
-        "@gjsify/resolve-npm": "workspace:^",
-        "@gjsify/tty": "workspace:^",
-        "@gjsify/zlib": "workspace:^",
-        "assert": "^2.0.0",
-        "constants-browserify": "^1.0.0",
-        "core-js": "^3.30.2",
-        "crypto-browserify": "^3.12.0",
-        "esbuild-plugin-glob": "^2.2.2",
-        "micromatch": "^4.0.5",
-        "path-browserify": "^1.0.1",
-        "punycode": "^2.3.0",
-        "stream-browserify": "^3.0.0",
-        "string_decoder": "^1.3.0"
+    "peerDependencies": {
+        "esbuild": "^0.17.19"
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.195",
-        "@types/micromatch": "^4.0.2",
         "esbuild": "^0.17.19",
-        "lodash": "^4.17.21",
         "typescript": "^5.1.3"
     }
 }
