chore(import): Use @girs/[name]-[version] instead of gi://[name]?version=[version] imports to fix commonjs module resolutions

--- a/packages/node/tty/package.json
+++ b/packages/node/tty/package.json
@@ -4,6 +4,7 @@
     "description": "Node.js tty module for Gjs",
     "main": "lib/cjs/index.js",
     "module": "lib/esm/index.js",
+    "type": "module",
     "scripts": {
         "clear": "rm -rf lib tsconfig.tsbuildinfo",
         "print:name": "echo '@gjsify/tty'",
