--- a/packages/node/assert/package.json
+++ b/packages/node/assert/package.json
@@ -2,6 +2,7 @@
     "name": "@gjsify/assert",
     "version": "0.0.1",
     "description": "Node.js assert module for Gjs",
+    "type": "module",
     "main": "lib/cjs/index.js",
     "module": "lib/esm/index.js",
     "types": "lib/types/index.d.ts",
