--- a/packages/node/buffer/package.json
+++ b/packages/node/buffer/package.json
@@ -2,6 +2,7 @@
     "name": "@gjsify/buffer",
     "version": "0.0.1",
     "description": "Node.js buffer module for Gjs",
+    "type": "module",
     "main": "lib/cjs/index.js",
     "module": "lib/esm/index.js",
     "scripts": {
